fix wrap on tags

--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -59,6 +59,7 @@
 .finTagsList {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .finTagCreate {
